tests/integration/errors/fn_captures_mutate.rsg
// TEST: compile_error
// EXPECT-ERROR: cannot assign mutable closure to Fn
module test_err

fn main() {
    count := 0
    var cb: Fn(i32) -> i32 = |x| {
        count += 1
        x + count
    }
}
